--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html --public-url /quotegenerator/",
+    "build": "parcel build index.html --public-url /quoteGenerator",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
